src/objects/Ovo__c.object
<CustomObject>
    <fields>
        <fullName>Pre_o_Un__c</fullName>
        <label>Preço Un.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tipo_Tamanho__c</fullName>
        <label>Tipo Tamanho</label>
        <picklist>
            <picklistValues>
                <fullName>Extra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codorna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caipira</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Ovo__c</fullName>
        <label>Tipo de Ovo</label>
        <picklist>
            <picklistValues>
                <fullName>Branco</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vermelho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codorna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caipira</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ovo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Ovo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ovos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>